# telegram-bot

./: .gitignore  LICENSE  README.md  config.py  main.py  model.py  pyproject.toml  requirements.txt  tele.py
